<resources>
    <string name="app_name">Scan Era - QR code scanner</string>

    <!-- General -->
    <string name="share">Share</string>
    <string name="links">Links</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy">Copy</string>

    <!-- Error -->
    <string name="error_camera_unknown">Unknown camera error</string>
    <string name="error_camera_unknown_type">Unknown code type</string>
    <string name="error_camera_scan">Scanner didn\'t find any barcodes</string>

    <!-- History -->
    <string name="screen_history">History</string>
    <string name="history_empty">It\'s empty here</string>
    <string name="history_empty_subtitle">Start scanning qr codes to fill this space</string>
    <string name="history_scan">Scan qr code</string>

    <!-- Scan -->
    <string name="screen_scan">Scan</string>
    <string name="camera_permission_allow">Allow access to the camera to scan the qr codes.</string>
    <string name="camera_permission_button">Allow</string>
    <string name="camera_permission_required">Scanning barcodes requires camera permission</string>

    <!-- Barcodes -->
    <string name="barcodes_scan_date">Scan info</string>
    <string name="barcodes_scan_date_format">Scan date: %s\nScan time: %s</string>
    <string name="barcodes_display">Display</string>
    <string name="barcodes_raw">Raw</string>

    <!-- Url -->
    <string name="screen_url">Link</string>
    <string name="url_open">Open in browser</string>
    <string name="url_title">Title</string>
    <string name="url_url">Url</string>

    <!-- Wifi -->
    <string name="screen_wifi">Wifi</string>
    <string name="wifi_encryption_type">Encryption type</string>
    <string name="wifi_ssid">Ssid</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_unavailable">Network unavailable</string>

    <string name="wifi_ssid_open">Open</string>
    <string name="wifi_ssid_wpa">Wpa</string>
    <string name="wifi_ssid_wep">Wep</string>

    <string name="wifi_join">Join Wifi</string>
    <string name="wifi_join_message">Wifi password copied, opening settings</string>
    <string name="wifi_copy_password">Copy password</string>
    <string name="wifi_open_settings">Open Wifi settings</string>

    <!-- Sms -->
    <string name="screen_sms">Sms</string>
    <string name="sms_message">Message</string>
    <string name="sms_phone">Phone number</string>
    <string name="sms_write_back">Write back</string>

    <!-- Phone -->
    <string name="screen_phone">Phone</string>
    <string name="phone_number">Number</string>
    <string name="phone_type">Type</string>
    <string name="phone_call">Call</string>
    <string name="phone_add_contact">Add contact</string>

    <string name="phone_unknown">Unknown</string>
    <string name="phone_work">Work</string>
    <string name="phone_home">Home</string>
    <string name="phone_fax">Fax</string>
    <string name="phone_mobile">Mobile</string>

    <!-- GeoPoint -->
    <string name="screen_geo_point">Geo Point</string>
    <string name="geo_point_latitude">Latitude</string>
    <string name="geo_point_longitude">Longitude</string>
    <string name="geo_point_open_in_map">Open in Google Maps</string>

    <!-- Email -->
    <string name="screen_email">Email</string>
    <string name="email_address">Address</string>
    <string name="email_subject">Subject</string>
    <string name="email_body">Body</string>
    <string name="email_send">Send email</string>

    <!-- Driver License -->
    <string name="screen_driver_license">Driver License</string>
    <string name="driver_license_address_city">Address city</string>
    <string name="driver_license_address_state">Address state</string>
    <string name="driver_license_address_street">Address street</string>
    <string name="driver_license_address_zip">Address zip</string>
    <string name="driver_license_birth_date">Birth date</string>
    <string name="driver_license_document_type">Document type</string>
    <string name="driver_license_expiration_date">Expiration date</string>
    <string name="driver_license_first_name">First name</string>
    <string name="driver_license_gender">Gender</string>
    <string name="driver_license_issue_date">Issue date</string>
    <string name="driver_license_issuing_country">Issuing country</string>
    <string name="driver_license_last_name">Last name</string>
    <string name="driver_license_license_number">License number</string>
    <string name="driver_license_middle_name">Middle name</string>

    <!-- Contact Info -->
    <string name="screen_contact_info">Contact Info</string>

    <string name="contact_info_header_person">Person Info:</string>
    <string name="contact_info_header_addresses">Addresses:</string>
    <string name="contact_info_header_emails">Emails:</string>
    <string name="contact_info_header_phones">Phones:</string>
    <string name="contact_info_header_urls">Urls:</string>

    <string name="contact_info_organization">Organization</string>
    <string name="contact_info_title">Title</string>
    <string name="contact_info_first_name">First name</string>
    <string name="contact_info_formatted_name">Formatted name</string>
    <string name="contact_info_last_name">Last name</string>
    <string name="contact_info_middle_name">Middle name</string>
    <string name="contact_info_prefix_name">Prefix name</string>
    <string name="contact_info_pronunciation_name">Pronunciation name</string>
    <string name="contact_info_suffix_name">Suffix name</string>

    <string name="contact_info_address_type">Type</string>
    <string name="contact_info_address_lines">Address lines</string>
    <string name="contact_info_address_type_unknown">Unknown</string>
    <string name="contact_info_address_type_work">Work</string>
    <string name="contact_info_address_type_home">Home</string>

    <string name="contact_info_email_address">Address</string>
    <string name="contact_info_email_body">Body</string>
    <string name="contact_info_email_subject">Subject</string>

    <string name="contact_info_phone_type">Type</string>
    <string name="contact_info_phone_number">Number</string>
    <string name="contact_info_phone_type_unknown">Unknown</string>
    <string name="contact_info_phone_type_work">Work</string>
    <string name="contact_info_phone_type_home">Home</string>
    <string name="contact_info_phone_type_fax">Fax</string>
    <string name="contact_info_phone_type_mobile">Mobile</string>

    <string name="contact_info_url">Link</string>

    <!-- Calendar event -->
    <string name="screen_calendar_event">Calendar Event</string>
    <string name="calendar_event_end">End time</string>
    <string name="calendar_event_start">Start time</string>
    <string name="calendar_event_description">Description</string>
    <string name="calendar_event_location">Location</string>
    <string name="calendar_event_organizer">Organizer</string>
    <string name="calendar_event_status">Status</string>
    <string name="calendar_event_summary">Summary</string>
    <string name="calendar_event_add">Add to calendar</string>

    <!-- Text -->
    <string name="screen_text">Text</string>
    <string name="text_search">Search in internet</string>

    <!-- Activities -->
    <string name="screen_activities">Activities</string>
    <string name="activities_scanned">Scanned qr codes</string>
    <string name="activities_version">App Version</string>
    <string name="activities_currently_scan">The app supports scanning:</string>
    <string name="activities_share_app">Share app</string>
    <string name="activities_review_app">Review app</string>
    <string name="activities_scan_from_gallery">Scan from gallery</string>
    <string name="activities_read_storage_required">To scan barcode from gallery the app needs read storage permission.</string>
</resources>