<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:title="@string/screen_activities" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/views_margin_big">

            <TextView
                android:id="@+id/action_share_app"
                style="@style/TextView.Activities.Actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_share_app"
                app:drawableEndCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/action_review_app"
                style="@style/TextView.Activities.Actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_review_app"
                app:drawableEndCompat="@drawable/ic_review" />

            <TextView
                android:id="@+id/action_scan_from_gallery"
                style="@style/TextView.Activities.Actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_scan_from_gallery"
                app:drawableEndCompat="@drawable/ic_gallery" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/views_margin_big"
                android:text="@string/activities_currently_scan"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_calendar_event"
                    app:drawableStartCompat="@drawable/ic_calendar_event" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_contact_info"
                    app:drawableStartCompat="@drawable/ic_contact_info" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_driver_license"
                    app:drawableStartCompat="@drawable/ic_driver_license" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_email"
                    app:drawableStartCompat="@drawable/ic_email" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_geo_point"
                    app:drawableStartCompat="@drawable/ic_geo_point" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_phone"
                    app:drawableStartCompat="@drawable/ic_phone" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_sms"
                    app:drawableStartCompat="@drawable/ic_sms" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_text"
                    app:drawableStartCompat="@drawable/ic_text" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/links"
                    app:drawableStartCompat="@drawable/ic_link" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView style="@style/CardView.Activities">

                <TextView
                    style="@style/TextView.Activities.Scan"
                    android:text="@string/screen_wifi"
                    app:drawableStartCompat="@drawable/ic_wifi" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/views_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activities_scanned" />

                <TextView
                    android:id="@+id/text_scanned_qrs_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/views_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activities_version" />

                <TextView
                    android:id="@+id/text_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1.0.5" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
