<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:src="@drawable/ic_empty_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginTop="@dimen/views_margin"
        android:gravity="center"
        android:text="@string/history_empty"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin_big"
        android:layout_marginTop="@dimen/views_margin_small"
        android:gravity="center"
        android:text="@string/history_empty_subtitle"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_scan"
        style="@style/Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginTop="@dimen/views_margin"
        android:text="@string/history_scan"
        app:icon="@drawable/ic_qr_scanner" />

</LinearLayout>