<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayout.Barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.Barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/screen_contact_info" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        style="@style/ScrollView.Barcode"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ConstraintLayout.Barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_barcode"
                style="@style/ImageView.Barcode"
                android:src="@drawable/ic_contact_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title"
                style="@style/TextView.Barcode.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image_barcode"
                tools:text="@string/screen_contact_info" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_send_email"
                style="@style/Button.Icon.Barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/views_margin"
                android:text="@string/email_send"
                app:icon="@drawable/ic_send"
                app:layout_constraintTop_toBottomOf="@id/text_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_contact"
                style="@style/Button.Icon.Barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/views_margin_small"
                android:text="@string/phone_add_contact"
                app:icon="@drawable/ic_add_person"
                app:layout_constraintTop_toBottomOf="@id/button_send_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_copy"
                style="@style/Button.Icon.Barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/views_margin_small"
                android:text="@string/copy"
                app:icon="@drawable/ic_copy_text"
                app:layout_constraintTop_toBottomOf="@id/button_add_contact" />

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/recycler"
                style="@style/RecyclerView.Barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_copy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
