<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView.Barcode"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ConstraintLayout.Barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.Barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/screen_url" />

        <ImageView
            android:id="@+id/image_barcode"
            style="@style/ImageView.Barcode"
            android:src="@drawable/ic_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/text_title"
            style="@style/TextView.Barcode.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_barcode"
            tools:text="@string/screen_url" />

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/recycler"
            style="@style/RecyclerView.Barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_open"
            style="@style/Button.Icon.Barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:text="@string/url_open"
            app:icon="@drawable/ic_open_browser"
            app:layout_constraintTop_toBottomOf="@id/recycler"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_copy"
            style="@style/Button.Icon.Barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:layout_marginTop="@dimen/views_margin_small"
            android:text="@string/copy"
            app:icon="@drawable/ic_copy_text"
            app:layout_constraintTop_toBottomOf="@id/button_open" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>